almost done, game failer added

--- a/src/index.html
+++ b/src/index.html
@@ -27,5 +27,6 @@
     <p id="score" class="absolute top-0 left-[490px] inline-block text-white">
       0
     </p>
+    <p id="fail_alert" style="visibility:hidden;" class="absolute animate-bounce text-black p-2 bg-teal-300 top-[220px] left-[160px]">game field!</p>
   </body>
 </html>
